feat: categories config
